<resources>
    <string name="app_name" translatable="false">SmartFit</string>
    <string name="tv_no_focus_tag" translatable="false">tv_no_focus_tag</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="v1">v1</string>
    <string name="locale_key" translatable="false">app_locale</string>
    <string name="app_language">App Language</string>
    <string name="english">English</string>
    <string name="arabic">العربيه</string>
    <string name="welcome_to_our_smart_gym_app">Welcome to SmartFit</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="lets_login">Lets Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="for_more_details_follow_this_link_www_powerhour_com_info">For more details follow this link\n https://smartfit-web.vercel.app/"</string>
    <string name="login">Login</string>
    <string name="user">Trainee</string>
    <string name="trainer">Trainer</string>
    <string name="allTrainers">Trainers</string>
    <string name="doctor">Doctor</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>
    <string name="program">Program\n</string>
    <string name="diet">diet</string>
    <string name="calender">Calender</string>
    <string name="trainers">Chat with your trainers and doctors</string>
    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="doctor_trainer_image">doctor_trainer_image</string>
    <string name="book_now">Book Now</string>
    <string name="trainee_bookings">Trainee Bookings</string>
    <string name="booking">Booking</string>
    <string name="chat_with_your_patients">Chat with your Patients</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="update">Update</string>
    <string name="user_type">User Type</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="chat_with_your_trainees">Chat with your Trainees</string>
    <string name="trainee">Trainee</string>
    <string name="log_out">Log out</string>
    <string name="no_trainee_requests">No Trainee Requests</string>
    <string name="_12_00">12:00</string>
    <string name="no_patients_yet_to_chat_with">No patients yet to chat with</string>
    <string name="no_trainees_yet_to_chat_with">No trainees yet to chat with</string>
    <string name="iconaccount">iconAccount</string>
    <string name="doctors">Doctors</string>
    <string name="arrow_doctor">Arrow doctor</string>
    <string name="arrow_trainer">Arrow Trainer</string>
    <string name="trainers_profile">Trainers</string>
    <string name="language">Language</string>
    <string name="arrow">Arrow</string>
    <string name="regional">Regional</string>
    <string name="notifications">Notifications</string>
    <string name="my_bookings">My Bookings</string>
    <string name="version_1_0_0">Version 1.0.0</string>
    <string name="ahlan_mohamed">Ahlan Mohamed</string>
    <string name="mohamedsaada100_gmail_com">Mohamedsaada100@gmail.com</string>
    <string name="account">Account</string>
    <string name="ahlan">Ahlan</string>
    <string name="traines">Trainees</string>
    <string name="patients">Patients</string>
    <string name="title_activity_general_profile_details">GeneralProfileDetailsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="allDoctors">Doctors</string>
    <string name="apply">Apply</string>
    <string name="cycling">Cycling</string>
    <string name="running">Running</string>
    <string name="daily_health">Daily Health</string>
    <string name="flexibility">Flexibility</string>
    <string name="jump_rope">Jump Rope</string>
    <string name="squat">Squat</string>
    <string name="pending">Pending</string>
    <string name="accepted">Accepted</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="write_a_message">Write a message</string>
    <string name="no_patinets_requests">No Patients Requests</string>

</resources>