<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryOrangeBold"
    tools:context=".ui.login.LoginFragment">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/backArrow"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/let_arrow"
        app:layout_constraintBottom_toTopOf="@+id/h_2"
        app:layout_constraintStart_toStartOf="@+id/v_1"
        app:layout_constraintTop_toTopOf="@+id/h_1" />

    <TextView
        android:id="@+id/welcome_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/gotham"
        android:gravity="center"
        android:text="@string/lets_login"
        android:textColor="@color/textColor"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/v_2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/v_1"
        app:layout_constraintTop_toTopOf="@+id/h_2" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/v_2"
        app:layout_constraintStart_toStartOf="@+id/v_1"
        app:layout_constraintTop_toBottomOf="@+id/h_3">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEdEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/textColor"
            app:boxBackgroundColor="@color/textColor"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/textColor"
            app:boxStrokeWidth="2dp"
            app:counterTextColor="@color/colorPrimaryOrange"
            app:hintTextColor="@color/colorPrimaryOrange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColorHighlight="@color/colorPrimaryOrange"
                android:textSize="@dimen/logintextdim" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutEdPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:backgroundTint="@color/textColor"
            app:boxBackgroundColor="@color/textColor"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/textColor"
            app:boxStrokeWidth="2dp"
            app:counterTextColor="@color/colorPrimaryOrange"
            app:hintTextColor="@color/colorPrimaryOrange"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryOrange">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:gravity="center_vertical"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textSize="@dimen/logintextdim" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/whoWillLoginRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toStartOf="@+id/v_2"
        app:layout_constraintStart_toStartOf="@+id/v_1"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/userRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:fontFamily="@font/gotham"
            android:text="@string/user"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/trainerRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/gotham"
            android:text="@string/trainer"
            android:layout_weight="1"

            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/doctorRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/gotham"
            android:layout_weight="1"
            android:text="@string/doctor"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginBtn"
        style="@style/OrangeButton"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:text="@string/login"
        android:textColor="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/h_4"
        app:layout_constraintEnd_toStartOf="@+id/v_2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/v_1" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminateTint="@color/textColor"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="@+id/v_2"
        app:layout_constraintStart_toStartOf="@+id/v_1"
        app:layout_constraintTop_toBottomOf="@+id/whoWillLoginRadioGroup" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/gotham"
        android:text="@string/for_more_details_follow_this_link_www_powerhour_com_info"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/v_2"
        app:layout_constraintStart_toStartOf="@+id/v_1"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/v_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.37"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/h_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.83" />
</androidx.constraintlayout.widget.ConstraintLayout>